--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import './assets/_include-media';
+@import './_include-media';
 
 html, body {
   font-family: 'Roboto', sans-serif;
